Fix width overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   font-size: 1.6rem;
+  overflow: hidden scroll;
 }
 
 ul {
@@ -425,7 +426,6 @@ a {
 
 /* phần foot */
 .block_foot {
-  width: 1236px;
   margin: auto;
   margin-top: 9em;
   margin-bottom: 5em;
@@ -590,7 +590,6 @@ footer .block_end {
 
 .location_right {
   height: 90px;
-  width: 460px;
   padding-top: 140px;
   margin-left: 130px;
 }
